--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -10,7 +10,7 @@
     </ng-container>
     <ng-container matColumnDef="category">
       <th mat-header-cell *matHeaderCellDef> Categoria </th>
-      <td mat-cell *matCellDef="let courses"> {{courses.category}} </td>
+      <td mat-cell *matCellDef="let courses"><mat-icon aria-hidden="false" aria-label="Categoria do Curso" >{{ courses.category | category }}</mat-icon> {{courses.category}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
