--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -1,1 +1,21 @@
-<p>course-form works!</p>
+<mat-card>
+  <mat-toolbar color="primary" class="centralize">
+      <span>Detalhes do Curso</span>
+  </mat-toolbar>
+  <mat-card-content>
+      <form [formGroup]="form">
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Nome" formControlName="name">
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" style="width: 100%;">
+          <input matInput placeholder="Categoria" formControlName="category">
+        </mat-form-field>
+      </form>
+    </mat-card-content>
+
+    <mat-card-actions class="centralize">
+      <button mat-raised-button color="primary" style="margin: 5px;" (click)="onSubmit()">SALVAR</button>
+      <button mat-raised-button style="margin: 5px;" (click)="onCancel()">CANCELAR</button>
+    </mat-card-actions>
+</mat-card>
