--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -9,7 +9,12 @@
         </mat-form-field>
 
         <mat-form-field appearance="fill" style="width: 100%;">
-          <input matInput placeholder="Categoria" formControlName="category">
+          <mat-label>Selecione .. </mat-label>
+            <mat-select formControlName="category">
+              <mat-option value="null"></mat-option>
+              <mat-option value="front-end">Front-End</mat-option>
+              <mat-option value="back-end">Back-End</mat-option>
+            </mat-select>
         </mat-form-field>
       </form>
     </mat-card-content>
