--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -3,7 +3,7 @@
       <span>Detalhes do Curso</span>
   </mat-toolbar>
   <mat-card-content>
-      <form [formGroup]="form">
+      <form [formGroup]="form" class="min-width">
         <mat-form-field class="full-width">
           <input matInput placeholder="Nome" formControlName="name">
         </mat-form-field>
