--- a/src/app/courses/courses/courses.component.css
+++ b/src/app/courses/courses/courses.component.css
@@ -1,3 +1,14 @@
+mat-card {
+  max-width: 80%;
+  margin: 2Em auto ;
+}
+
+.column-flex {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+}
+
 .loading-spinner {
   padding: 25px;
   background: rgba(0, 0, 0, 0.15);
