--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -2,38 +2,14 @@
   <mat-toolbar color="primary" class="title">
     <span>Cursos Disponíveis</span>
   </mat-toolbar>
-  <div *ngIf="courses$ | async as courses; else loading">
-  <table mat-table [dataSource]="courses" class="mat-elevation-z8">
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Curso </th>
-      <td mat-cell *matCellDef="let courses"> {{courses.name}} </td>
-    </ng-container>
-    <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef> Categoria </th>
-      <td mat-cell *matCellDef="let courses"><mat-icon aria-hidden="false" aria-label="Categoria do Curso" >{{ courses.category | category }}</mat-icon> {{courses.category}} </td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef>
-        <button (click)="onAdd()" mat-mini-fab color="primary" aria-label="Adicionar um curso">
-          <mat-icon>add</mat-icon>
-        </button>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let courses">
-        <button mat-icon-button color="primary" aria-label="Editar curso">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn" aria-label="Remover curso">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </mat-cell>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  </div>
+  <div  class="mat-elevation-z8">
+    <app-courses-list *ngIf="courses$ | async as courses; else loading"
+    [courses]="courses">
+    </app-courses-list>
     <ng-template #loading>
       <div class="loading-spinner">
         <mat-spinner></mat-spinner>
       </div>
     </ng-template>
+  </div>
 </mat-card>
