--- a/src/app/courses/containers/courses/courses.component.html
+++ b/src/app/courses/containers/courses/courses.component.html
@@ -4,8 +4,8 @@
   </mat-toolbar>
   <div  class="mat-elevation-z8">
     <app-courses-list *ngIf="courses$ | async as courses; else loading"
-    [courses]="courses">
-    </app-courses-list>
+    [courses]="courses"
+    (add)="onAdd()"></app-courses-list> <!-- aqui, o evento add escuta o que vier do componente courses.component.ts configurado no @Output() -->
     <ng-template #loading>
       <div class="loading-spinner">
         <mat-spinner></mat-spinner>
