--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -17,7 +17,7 @@
       <button (click)="onEdit(courses)" mat-icon-button color="primary" aria-label="Editar curso">
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-icon-button color="warn" aria-label="Remover curso">
+      <button (click)="onDelete(courses)" mat-icon-button color="warn" aria-label="Remover curso">
         <mat-icon>delete</mat-icon>
       </button>
     </mat-cell>
