--- a/src/app/courses/containers/courses/courses.component.html
+++ b/src/app/courses/containers/courses/courses.component.html
@@ -5,7 +5,9 @@
   <div  class="mat-elevation-z8">
     <app-courses-list *ngIf="courses$ | async as courses; else loading"
     [courses]="courses"
-    (add)="onAdd()" (edit)="onEdit($event)"></app-courses-list> <!-- aqui, o evento add escuta o que vier do componente courses.component.ts configurado no @Output() -->
+    (add)="onAdd()"
+    (edit)="onEdit($event)"
+    (remove)="onRemove($event)"></app-courses-list> <!-- aqui, o evento add escuta o que vier do componente courses.component.ts configurado no @Output() -->
     <ng-template #loading>
       <div class="loading-spinner">
         <mat-spinner></mat-spinner>
