--- a/src/app/courses/containers/course-form/course-form.component.html
+++ b/src/app/courses/containers/course-form/course-form.component.html
@@ -5,7 +5,9 @@
   <mat-card-content>
       <form [formGroup]="form" class="min-width">
         <mat-form-field class="full-width">
-          <input matInput placeholder="Nome" formControlName="name">
+          <input matInput placeholder="Nome" formControlName="name" #input>
+          <mat-error *ngIf="form.get('name')?.invalid"> {{ getErrorMessage("name") }}</mat-error>
+          <mat-hint align="end">{{input.value.length}}/20</mat-hint>
         </mat-form-field>
 
         <mat-form-field appearance="fill" style="width: 100%;">
@@ -15,6 +17,7 @@
               <mat-option value="front-end">Front-End</mat-option>
               <mat-option value="back-end">Back-End</mat-option>
             </mat-select>
+            <mat-error *ngIf="form.get('category')?.invalid"> {{ getErrorMessage("category") }}</mat-error>
         </mat-form-field>
       </form>
     </mat-card-content>
