--- a/src/app/courses/containers/course-form/course-form.component.html
+++ b/src/app/courses/containers/course-form/course-form.component.html
@@ -14,8 +14,8 @@
           <mat-label>Selecione .. </mat-label>
             <mat-select formControlName="category">
               <mat-option value="null"></mat-option>
-              <mat-option value="front-end">Front-End</mat-option>
-              <mat-option value="back-end">Back-End</mat-option>
+              <mat-option value="Front-End">Front-End</mat-option>
+              <mat-option value="Back-End">Back-End</mat-option>
             </mat-select>
             <mat-error *ngIf="form.get('category')?.invalid"> {{ getErrorMessage("category") }}</mat-error>
         </mat-form-field>
