--- a/src/app/courses/containers/course-form/course-form.component.html
+++ b/src/app/courses/containers/course-form/course-form.component.html
@@ -21,7 +21,7 @@
         </mat-form-field>
         <mat-toolbar>
           <span>Aulas</span>
-          <button mat-icon-button color="accent">
+          <button mat-icon-button color="accent" (click)="addNewLesson()">
             <mat-icon class="mat-18" aria-label="Adicionar uma nova aula">add</mat-icon>
           </button>
         </mat-toolbar>
@@ -40,6 +40,11 @@
                 <span matPrefix>https://youtu.be/</span>
                 <input matInput formControlName="youtubeUrl">
               </mat-form-field>
+            </td>
+            <td>
+              <button mat-icon-button color="warn" (click)="removeLesson(i)">
+                <mat-icon aria-label="Remover uma aula">delete</mat-icon>
+              </button>
             </td>
           </tr>
         </table>
