--- a/src/app/courses/containers/course-form/course-form.component.html
+++ b/src/app/courses/containers/course-form/course-form.component.html
@@ -19,12 +19,15 @@
             </mat-select>
             <mat-error *ngIf="form.get('category')?.invalid"> {{ getErrorMessage("category") }}</mat-error>
         </mat-form-field>
+
         <mat-toolbar>
           <span>Aulas</span>
           <button mat-icon-button color="accent" (click)="addNewLesson()">
             <mat-icon class="mat-18" aria-label="Adicionar uma nova aula">add</mat-icon>
           </button>
         </mat-toolbar>
+        <mat-error *ngIf="isFormArrayRequired()"> Adicione pelo menos uma aula</mat-error>
+
         <table style="width: 100%" formArrayName="lessons"
         *ngFor="let lesson of getLessonsFormArray(); let i = index">
           <tr [formGroupName]="i"> <!-- cada registro(i) do formArray -->
@@ -32,6 +35,7 @@
               <mat-form-field class="full-width">
                 <mat-label>Nome da Aula</mat-label>
                 <input matInput formControlName="name">
+                <mat-error *ngIf="getLessonsFormArray()[i].get('name')?.invalid"> Campo inválido </mat-error>
               </mat-form-field>
             </td>
             <td style="width: 30%;">
@@ -39,6 +43,7 @@
                 <mat-label>URL</mat-label>
                 <span matPrefix>https://youtu.be/</span>
                 <input matInput formControlName="youtubeUrl">
+                <mat-error *ngIf="getLessonsFormArray()[i].get('youtubeUrl')?.invalid"> Campo inválido </mat-error>
               </mat-form-field>
             </td>
             <td>
@@ -48,6 +53,7 @@
             </td>
           </tr>
         </table>
+
       </form>
     </mat-card-content>
 
